# lowpower_camera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig
.github/workflows/: main.yml
components/esp32-camera/driver/: cam_hal.c  esp_camera.c
components/esp32-camera/driver/private_include/: cam_hal.h
components/usb/usb_stream/: descriptor.c  usb_stream.c
components/usb/usb_stream/include/: libuvc_def.h  usb_stream.h
components/usb/usb_stream/private_include/: usb_stream_descriptor.h
docs/: x3_d_cover.stp  x3_m_cover.stp  x3_top_cover.stp
main/: CMakeLists.txt  camera.c  camera.h  camera_uvc_controls.c  camera_uvc_controls.h  cat1.c  config.c  config.h  http.c  iot_mip.c  main.c  misc.c  morse.c  mqtt.c  net_module.c  ota.c  pir.c  pir.h  sleep.c  sleep.h  storage.c  system.c  system.h  uvc.c  uvc.h  uvc_descriptor_dump.c  wifi.c
main/web/: addTimestamp.js  index.html  package-lock.json  vite.config.js
main/web/src/: main.js  utils.js
main/web/src/api/: index.js
main/web/src/components/: loading.js  select.js
main/web/src/components/dialog/: index.js  util.js
main/web/src/i18n/: index.js
main/web/src/i18n/lang/: en_US.json  zh_CN.json
main/web/src/style/: capture.css  index.css  select.css  ui.css  wlan.css
main/web/src/view/: capture.js  cellular.js  device.js  image.js  mqtt.js  wlan.js
